tests/ui/fail/unknown-return-type.rs
use fauxgen::*;

#[generator]
fn some_generator() -> Undef {
    todo!()
}

fn main() {}
